@@ -1,5 +1,7 @@
 [Changes 1.2c01]
 
+* Allow selection of alternate hashing methods with $crypt(). (caf)
+
 * Improve the initial seeding of the randm() fallback RNG. (caf)
 
 * Strengthen the cookie generation algorithm for /detach. (caf)
